--- a/PDCursesUtils/PDCursesUtils.vcxproj.filters
+++ b/PDCursesUtils/PDCursesUtils.vcxproj.filters
@@ -15,15 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Games1-4.MarsAttacks.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\PDCursesUtils\PDCursesUtils.cpp">
+    <ClCompile Include="PDCursesUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\PDCursesUtils\PDCursesUtils.h">
+    <ClInclude Include="PDCursesUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
