Game.h file created. Added initial insights and data to start developing it

--- a/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
+++ b/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="PDCursesUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Games1-4.MarsAttacks.h" />
     <ClInclude Include="PDCursesUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
