--- a/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj.filters
+++ b/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="PDCursesUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Games1-4.MarsAttacks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
