--- a/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
+++ b/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
@@ -141,10 +141,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Games1-4.MarsAttacks.cpp" />
     <ClCompile Include="PDCursesUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game.h" />
     <ClInclude Include="Games1-4.MarsAttacks.h" />
     <ClInclude Include="PDCursesUtils.h" />
   </ItemGroup>
