--- a/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
+++ b/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="Games1-4.MarsAttacks.h" />
+    <ClInclude Include="Other.h" />
     <ClInclude Include="PDCursesUtils.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
