--- a/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
+++ b/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj
@@ -144,6 +144,8 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Games1-4.MarsAttacks.cpp" />
     <ClCompile Include="Missile.cpp" />
+    <ClCompile Include="MovingObject.cpp" />
+    <ClCompile Include="StaticObject.cpp" />
     <ClCompile Include="PDCursesUtils.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Shield.cpp" />
@@ -152,6 +154,8 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Games1-4.MarsAttacks.h" />
     <ClInclude Include="Missile.h" />
+    <ClInclude Include="MovingObject.h" />
+    <ClInclude Include="StaticObject.h" />
     <ClInclude Include="Other.h" />
     <ClInclude Include="PDCursesUtils.h" />
     <ClInclude Include="Player.h" />
