--- a/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj.filters
+++ b/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="AlienBomb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AlienUFO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PDCursesUtils.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AlienBomb.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AlienUFO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
