--- a/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj.filters
+++ b/Games1-4.MarsAttacks/Games1-4.MarsAttacks.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="AlienUFO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Score.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PDCursesUtils.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AlienUFO.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Score.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
